[OWL-3851] group by category button doesn't work in grade summary panel